--- a/package.json
+++ b/package.json
@@ -20,17 +20,21 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "express": "^4.16.4",
     "path": "^0.12.7",
+    "primeicons": "^1.0.0",
+    "primeng": "^7.1.0-rc.1",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.12.1",
     "@angular/cli": "~7.0.5",
-    "@angular/compiler-cli": "~7.0.0",
+    "@angular/compiler-cli": "^7.2.9",
     "@angular/language-service": "~7.0.0",
+    "@fortawesome/fontawesome-free": "^5.7.2",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
